--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-uglify": "~1.4.1",
     "gulp-minify": "0.0.5",
     "gulp-uglifycss": "~1.0.4",
-    "gulp-merge": "~0.1.1"
+    "gulp-merge": "~0.1.1",
+    "gulp-sass": "~2.0.4"
   }
 }
