--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-minify": "0.0.5",
     "gulp-uglifycss": "~1.0.4",
     "gulp-merge": "~0.1.1",
-    "gulp-sass": "~2.0.4"
+    "gulp-sass": "~2.0.4",
+    "riotgear": "~2.0.0-beta"
   }
 }
