--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask
-Flask-SQLAlchemy
+Flask-SQLAlchemy>=2.0
 Flask-WTF
+Flask-Potion
+Flask-Principal>=0.4.0
 Flask-Login==0.2.11
 Flask-Menu
 Flask-Bcrypt
