--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "purecss": "~0.6.0",
     "open-iconic": "~1.1.1",
-    "es5-shim": "~4.1.13",
+    "es5-shim": "~4.1.14",
     "html5shiv": "~3.7.3",
     "riot": "~2.2.4",
     "riotcontrol": "*",
-    "zepto": "~1.1.6"
+    "pure": "purecss#~0.6.0",
+    "RiotControl": "riotcontrol#*",
+    "zepto": "zeptojs#~1.1.6"
   }
 }
