Fix portal issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Potion
 Flask-Principal>=0.4.0
 Flask-Login==0.2.11
 Flask-Menu
+Flask-Misaka
 Flask-Bcrypt
 git+file:///home/marlinf/Projects/flask-restless@master#egg=Flask-Restless
 Flask-Script
