--- a/wifidog-auth-flask.ini
+++ b/wifidog-auth-flask.ini
@@ -1,8 +1,8 @@
 [uwsgi]
-base = /home/marlinf/Projects/wifidog-auth-flask
+base = /var/www/auth
 app = app
 module = %(app)
-home = /home/marlinf/.virtualenvs/wifidog-auth-flask
+home = /home/ubuntu/.virtualenvs/auth
 pythonpath = %(base)
 socket = /tmp/%n.sock
 chmod-socket = 666
