--- a/wifidog-auth-flask.ini
+++ b/wifidog-auth-flask.ini
@@ -1,4 +1,6 @@
 [uwsgi]
+uid = ubuntu
+gid = ubuntu
 base = /var/www/auth
 app = app
 module = %(app)
@@ -8,3 +10,6 @@ socket = /tmp/%n.sock
 chmod-socket = 666
 callable = app
 logto = /var/log/uwsgi/%n.log
+master = true
+processes = 4
+threads = 2
