--- a/auth.ini
+++ b/auth.ini
@@ -2,13 +2,11 @@
 uid = ubuntu
 gid = ubuntu
 base = /var/www/auth
-app = app
-module = %(app)
+module = wsgi
 home = /home/ubuntu/.virtualenvs/auth
 pythonpath = %(base)
 socket = /tmp/%n.sock
 chmod-socket = 666
-callable = app
 logto = /var/log/uwsgi/%n.log
 master = true
 processes = 4
