Add Server Side Events with Web Notification API for push

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ Flask-Bcrypt
 Flask-Script
 Flask-Security
 Flask-Uploads
-marshmallow
+functools32
+gunicorn
+greenlet
+gevent
+markupsafe
 pillow
-uwsgi
+redis
