--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,17 @@
     "tests"
   ],
   "dependencies": {
-    "purecss": "~0.6.0",
     "open-iconic": "~1.1.1",
     "es5-shim": "~4.1.14",
     "html5shiv": "~3.7.3",
     "riot": "~2.2.4",
     "riotcontrol": "*",
-    "pure": "purecss#~0.6.0",
     "RiotControl": "riotcontrol#*",
     "zepto": "zeptojs#~1.1.6",
-    "marked": "~0.3.5"
+    "marked": "~0.3.5",
+    "pure": "purecss#~0.6.0"
+  },
+  "devDependencies": {
+    "pure": "purecss#~0.6.0"
   }
 }
