Add page titles, template DB for tests, and start writing tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ Flask-Bcrypt
 Flask-Script
 Flask-Security
 Flask-Uploads
+Flask-Zen
 functools32
 gitchangelog
 gunicorn
 greenlet
 gevent
+lxml
 markupsafe
 pillow
 pydot
