--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ python:
   - "3.5"
   - "3.5-dev"
   - "nightly" # currently points to 3.6-dev
-install: "pip install -r requirements.txt"
+install:
+    - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then pip install functools32; fi
+    - pip install -r requirements.txt
 script: "make tests"
