--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
   - "3.5-dev"
   - "nightly" # currently points to 3.6-dev
 install:
+    - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install ordereddict; fi
     - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then pip install functools32; fi
     - pip install -r requirements.txt
 script: "make tests"
