--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ pillow
 git+git://github.com/nlhepler/pydot.git#egg=pydot
 pyparsing==1.5.2
 redis
+
+# Python 2.6
+# ordereddict
+
+# Python 2.7
+# functools32
