--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then pip install functools32; fi
 - pip install -r requirements.txt
 
-before script:
+before_script:
   - "make bootstrap-tests"
   - "make serve &"
 
