--- a/bower.json
+++ b/bower.json
@@ -1,27 +1,14 @@
 {
-  "name": "wifidog-auth-flask",
-  "version": "0.3.1",
-  "homepage": "https://github.com/datashaman/wifidog-auth-flask",
-  "authors": [
-    "datashaman <marlinf@datashaman.com>"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "private": true,
   "devDependencies": {
-    "open-iconic": "~1.1.1",
     "es5-shim": "~4.1.14",
     "html5shiv": "~3.7.3",
+    "marked": "~0.3.5",
+    "open-iconic": "~1.1.1",
+    "pure": "purecss#~0.6.0",
     "riot": "~2.2.4",
     "riotcontrol": "*",
     "RiotControl": "riotcontrol#*",
-    "zepto": "zeptojs#~1.1.6",
-    "marked": "~0.3.5",
-    "pure": "purecss#~0.6.0"
+    "zepto": "zeptojs#~1.1.6"
   }
 }
