--- a/package.json
+++ b/package.json
@@ -1,22 +1,9 @@
 {
-  "name": "wifidog-auth-flask",
-  "version": "0.3.1",
-  "description": "A Wifidog Auth server written in Python Flask",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/datashaman/wifidog-auth-flask.git"
-  },
-  "author": "",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/datashaman/wifidog-auth-flask/issues"
-  },
+  "private": true,
   "devDependencies": {
     "babel": "^5.8.23",
     "browser-sync": "~2.9.11",
+    "cssmin": "^0.4.3",
     "event-stream": "~3.3.1",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
@@ -29,13 +16,10 @@
     "gulp-rename": "~1.2.2",
     "gulp-riot": "^0.3.1",
     "gulp-ruby-sass": "~2.0.4",
+    "gulp-size": "~2.0.0",
     "gulp-uglify": "~1.4.1",
     "gulp-util": "~3.0.6",
     "promise": "~7.0.4",
     "riot": "^2.2.4"
-  },
-  "dependencies": {
-    "cssmin": "^0.4.3",
-    "gulp-size": "~2.0.0"
   }
 }
