--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "babel": "^5.8.23",
+    "bower": "^1.7.2",
     "browser-sync": "~2.9.11",
     "cssmin": "^0.4.3",
     "event-stream": "~3.3.1",
@@ -19,6 +20,7 @@
     "gulp-size": "~2.0.0",
     "gulp-uglify": "~1.4.1",
     "gulp-util": "~3.0.6",
+    "nodemon": "^1.8.1",
     "promise": "~7.0.4",
     "riot": "^2.2.4"
   }
