--- a/fabric/supervisor/auth.conf
+++ b/fabric/supervisor/auth.conf
@@ -3,6 +3,7 @@ user=ubuntu
 directory=/var/www/auth
 process_name=%(program_name)s
 command=/home/ubuntu/.virtualenvs/auth/bin/gunicorn -b '127.0.0.1:8080' 'app:create_app()'
+environment={% for key, value in environment.iteritems() %}{{ key}}="{{ value }}"{% if not loop.last %},{% endif %}{% endfor %}
 autostart=true
 autorestart=true
 redirect_stderr=true
