--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-minify": "0.0.5",
     "gulp-rename": "~1.2.2",
     "gulp-riot": "^0.3.1",
+    "gulp-rollup": "^1.7.0",
     "gulp-ruby-sass": "~2.0.4",
     "gulp-size": "~2.0.0",
     "gulp-uglify": "~1.4.1",
