--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "babel": "^5.8.23",
     "bower": "^1.7.2",
     "browser-sync": "~2.9.11",
-    "cssmin": "^0.4.3",
     "event-stream": "~3.3.1",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
     "gulp-combine-media-queries": "~0.2.0",
     "gulp-concat": "~2.6.0",
-    "gulp-cssmin": "^0.1.7",
+    "gulp-cssnano": "^2.1.0",
     "gulp-load-plugins": "~1.0.0-rc.1",
     "gulp-merge": "~0.1.1",
     "gulp-minify": "0.0.5",
