--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gulp-uglify": "~1.4.1",
     "gulp-util": "~3.0.6",
     "nodemon": "^1.8.1",
-    "promise": "~7.0.4",
-    "riot": "^2.2.4"
+    "promise": "~7.0.4"
   }
 }
