Create service of Influxdb using Flask-InfluxDB

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ CSRF_SESSION_KEY=SomethingLongAndDifficultToGuess
 FACEBOOK_APP_ID=1234567890
 GOOGLE_ANALYTICS_TRACKING_ID=UA-1234567-1
 GTM_CONTAINER_ID=GTM-ABC123
+INFLUXDB_USER=root
+INFLUXDB_PASSWORD=root
 SECRET_KEY=SomethingElseThatIsLongAndDifficultToGuess
 SECURITY_PASSWORD_SALT=EnoughWithTheseSecretsAlready
