--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ INFLUXDB_USER=root
 INFLUXDB_PASSWORD=root
 SECRET_KEY=SomethingElseThatIsLongAndDifficultToGuess
 SECURITY_PASSWORD_SALT=EnoughWithTheseSecretsAlready
+TESTING=False
+WTF_CSRF_ENABLED=True
