--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 before_script:
   - nvm use v4.1.2
   - npm install -g bower gulp
+  - cp .env.tests .env
   - make production-install bootstrap-tests
-  - cp data/tests.db data/local.db
   - make serve &
 
 script: "make tests tests-webdriver"
