--- a/.env.tests
+++ b/.env.tests
@@ -1,3 +1,4 @@
 TESTING=True
 WTF_CSRF_ENABLED=False
-SQLALCHEMY_DATABASE_URI=sqlite:///../tests.db
+WTF_CSRF_METHODS=[]
+SQLALCHEMY_DATABASE_URI=sqlite:///../data/tests.db
