--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "nodemon": "^1.8.1",
     "promise": "~7.0.4",
     "riot": "^2.3.15"
-  }
+  },
+  "name": "wifidog-auth-flask",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:datashaman/wifidog-auth-flask.git",
+  "author": "datashaman <marlinf@datashaman.com>",
+  "license": "MIT"
 }
