--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Flask-Migrate
 Flask-Potion==0.8.1
 Flask-Principal>=0.4.0
 Flask-Script
-Flask-Security
+Flask-Security-Fork
 Flask-SQLAlchemy>=2.0
 Flask-Uploads
 Flask-WTF
