--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
+CSRF_SESSION_KEY=ABigSecretIsHardToFind
 FACEBOOK_APP_ID=1234567890
+FEATURE_PUSH=False
 GOOGLE_ANALYTICS_TRACKING_ID=UA-1234567-1
 GTM_CONTAINER_ID=GTM-ABC123
-INFLUXDB_USER=root
-INFLUXDB_PASSWORD=root
 SECRET_KEY=SomethingElseThatIsLongAndDifficultToGuess
 SECURITY_PASSWORD_SALT=EnoughWithTheseSecretsAlready
-TESTING=False
-WTF_CSRF_ENABLED=True
+SQLALCHEMY_DATABASE_URI=sqlite:///../data/local.db
