--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
-/*.db
 *.pyc
-app/static/tags/
-app/tags/**/*.js
-bootstrap.py
-bower_components/
+/app/static/tags/
+/app/tags/**/*.js
+/bootstrap.py
 /build/
-/data/
-logs/
-node_modules/
-tmp/
-vendor/
-.bundle/
-.env
-.env.local
-.ruby-version/
-.sass-cache/
+/.cache/
+/.coverage
+/node_modules/
+/.env
+/.env.local
