--- a/.env.tests
+++ b/.env.tests
@@ -1,4 +1,5 @@
-TESTING=True
+SECRET_KEY=secret_key
+SECURITY_PASSWORD_SALT=security_password_salt
+SQLALCHEMY_DATABASE_URI=sqlite:///../tests/tests.db
 WTF_CSRF_ENABLED=False
 WTF_CSRF_METHODS=[]
-SQLALCHEMY_DATABASE_URI=sqlite:///../data/tests.db
