--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "devDependencies": {
     "babel": "^5.8.23",
-    "bower": "^1.7.2",
     "browser-sync": "~2.9.11",
+    "es5-shim": "^4.5.9",
     "event-stream": "~3.3.1",
     "gulp": "~3.9.0",
     "gulp-autoprefixer": "~3.0.2",
@@ -16,13 +16,16 @@
     "gulp-rename": "~1.2.2",
     "gulp-riot": "^0.3.1",
     "gulp-rollup": "^1.7.0",
-    "gulp-ruby-sass": "~2.0.4",
+    "gulp-sass": "^3.1.0",
     "gulp-size": "~2.0.0",
     "gulp-uglify": "~1.4.1",
     "gulp-util": "~3.0.6",
-    "nodemon": "^1.8.1",
+    "html5shiv": "^3.7.3",
+    "marked": "^0.3.6",
+    "open-iconic": "^1.1.1",
     "promise": "~7.0.4",
-    "riot": "^2.3.15"
+    "purecss": "^1.0.0",
+    "zepto": "^1.2.0"
   },
   "name": "wifidog-auth-flask",
   "version": "1.0.0",
