--- a/requirements-frozen.txt
+++ b/requirements-frozen.txt
@@ -1,43 +1,21 @@
-Flask==0.10.1
+asbool==0.1.1
+blinker==1.4
+dotenvy==0.2.0
+Flask==0.12.2
 Flask-Bcrypt==0.7.1
-Flask-Login==0.2.11
-Flask-Mail==0.9.1
-Flask-Menu==0.4.0
-Flask-Misaka==0.3.0
+Flask-Login==0.4.0
+Flask-Menu==0.6.0
 Flask-Potion==0.8.1
 Flask-Principal==0.4.0
-Flask-SQLAlchemy==2.0
-Flask-Script==2.0.5
-Flask-Security==1.7.4
-Flask-Uploads==0.1.3
-Flask-WTF==0.12
-Jinja2==2.8
-MarkupSafe==0.23
-Pillow==3.0.0
-SQLAlchemy==1.0.8
-WTForms==2.0.2
-Werkzeug==0.10.4
-aniso8601==1.0.0
-argparse==1.2.1
-bcrypt==2.0.0
-blinker==1.4
-cffi==1.2.1
-functools32==3.2.3-2
-gevent==1.0.2
-gitchangelog==2.3.0
-greenlet==0.4.9
-gunicorn==19.3.0
-itsdangerous==0.24
-jsonschema==2.5.1
-lxml==3.4.4
-marshmallow==2.1.1
-misaka==1.0.2
-passlib==1.6.5
-pycparser==2.14
-pydot==1.0.2
-pyparsing==1.5.2
-redis==2.10.3
-requests==2.9.1
-sauceclient==0.2.1
-selenium==2.48.0
-six==1.10.0
+Flask-Script==2.0.6
+Flask-Security-Fork==2.0.1
+Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.2
+gitchangelog==3.0.3
+gunicorn==19.7.1
+lxml==4.1.1
+MarkupSafe==1.0
+Pillow==4.3.0
+requests==2.18.4
+six==1.11.0
