--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,9 @@ pipeline:
     secrets: [ deploy_key ]
     when:
       event: push
-      branch: master
+      branch:
+      - master
+      - staging
       matrix:
         PYTHON_VERSION: 3.6
   notify:
