--- a/.drone.yml
+++ b/.drone.yml
@@ -30,6 +30,7 @@ pipeline:
         PYTHON_VERSION: 3.6
   publish:
     image: plugins/docker
+    registry: docker.io
     repo: datashaman/wifidog-auth-flask
     tags: latest
     when:
