--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,8 @@ pipeline:
     image: plugins/docker
     repo: datashaman/wifidog-auth-flask
     tags: ${DRONE_COMMIT_BRANCH/master/latest}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     when:
       event: push
       matrix:
