--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
   "main": "index.js",
   "repository": "git@github.com:datashaman/wifidog-auth-flask.git",
   "author": "datashaman <marlinf@datashaman.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
