finally fix flask shell, use convention for debug flag

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 CSRF_SESSION_KEY=ABigSecretIsHardToFind
 FACEBOOK_APP_ID=1234567890
 FEATURE_PUSH=False
+FLASK_APP=serve.py
 GOOGLE_ANALYTICS_TRACKING_ID=UA-1234567-1
 GTM_CONTAINER_ID=GTM-ABC123
 SECRET_KEY=SomethingElseThatIsLongAndDifficultToGuess
