--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Uploads
 https://github.com/lepture/flask-wtf/archive/master.zip#egg=Flask-WTF
 gitchangelog
 gunicorn
+healthcheck
 lxml
 markupsafe
 pillow
