--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,8 @@ pipeline:
   restore-cache:
     image: drillster/drone-volume-cache
     restore: true
-    mount: /cache
+    mount:
+    - ./cache
     volumes:
     - /cache:/cache
   test:
@@ -16,7 +17,7 @@ pipeline:
     - pip install -r requirements.txt
     - python -m unittest discover -s tests
     environment:
-    - XDG_CACHE_HOME=/cache
+    - XDG_CACHE_HOME=./cache
     - TESTING=true
     when:
       event: push
@@ -25,9 +26,9 @@ pipeline:
     repo: datashaman/wifidog-auth-flask
     tags: ${DRONE_COMMIT_BRANCH/master/latest}
     environment:
-    - XDG_CACHE_HOME=/cache
+    - XDG_CACHE_HOME=./cache
     volumes:
-    - /cache:/cache
+    - ./cache:./cache
     - /var/run/docker.sock:/var/run/docker.sock
     privileged: true
     when:
@@ -38,7 +39,8 @@ pipeline:
   rebuild-cache:
     image: drillster/drone-volume-cache
     rebuild: true
-    mount: /cache
+    mount:
+    - ./cache
     volumes:
     - /cache:/cache
   notify:
