--- a/.drone.yml
+++ b/.drone.yml
@@ -26,9 +26,9 @@ pipeline:
     repo: datashaman/wifidog-auth-flask
     tags: ${DRONE_COMMIT_BRANCH/master/latest}
     environment:
-    - XDG_CACHE_HOME=./cache
+    - XDG_CACHE_HOME=/cache
     volumes:
-    - ./cache:./cache
+    - ./cache:/cache
     - /var/run/docker.sock:/var/run/docker.sock
     privileged: true
     when:
