--- a/.drone.yml
+++ b/.drone.yml
@@ -25,11 +25,10 @@ pipeline:
     image: plugins/docker
     repo: datashaman/wifidog-auth-flask
     tags: ${DRONE_COMMIT_BRANCH/master/latest}
-    environment:
-    - XDG_CACHE_HOME=/cache
     volumes:
     - /cache:/cache
     - /var/run/docker.sock:/var/run/docker.sock
+    build_args: -e XDG_CACHE_HOME=/cache
     privileged: true
     when:
       event: push
