--- a/instance.cfg.example
+++ b/instance.cfg.example
@@ -13,4 +13,4 @@ SECRET_KEY = 'SomethingElseThatIsLongAndDifficultToGuess'
 SECURITY_PASSWORD_SALT = 'EnoughWithTheseSecretsAlready'
 SNAPSCAN_API_KEY = '12345678-9012-3456-7890'
 SNAPSCAN_SNAP_CODE = 'abcdefghijkl'
-SQLALCHEMY_DATABASE_URI = 'sqlite:///../data/local.db'
+SQLALCHEMY_DATABASE_URI = 'sqlite:///../instance/data/development.db'
