--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "~1.4.1",
     "gulp-util": "~3.0.6",
     "html5shiv": "^3.7.3",
+    "microlib-tabs": "^2.1.1",
     "open-iconic": "^1.1.1",
     "promise": "~7.0.4",
     "purecss": "^1.0.0",
@@ -31,6 +32,5 @@
   "version": "1.0.0",
   "repository": "git@github.com:datashaman/wifidog-auth-flask.git",
   "author": "datashaman <marlinf@datashaman.com>",
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
