--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "promise": "~7.0.4",
     "purecss": "^1.0.0",
     "qs": "~> 1.0.0",
+    "sortablejs": "^1.7.0",
     "uglify-js": "~> 2.6.0",
     "zepto": "^1.2.0"
   },
