Upgrade npm assets

--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
   "private": true,
   "devDependencies": {
-    "babel": "^5.8.23",
-    "browser-sync": "~2.9.11",
-    "es5-shim": "^4.5.9",
-    "event-stream": "~3.3.1",
-    "gulp": "~3.9.0",
-    "gulp-autoprefixer": "~3.0.2",
+    "ansi-colors": "^1.0.1",
+    "browser-sync": "~2.23.3",
+    "es5-shim": "^4.5.10",
+    "event-stream": "~3.3.4",
+    "gulp": "~3.9.1",
+    "gulp-autoprefixer": "~4.1.0",
     "gulp-combine-media-queries": "~0.2.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-load-plugins": "~1.0.0-rc.1",
-    "gulp-merge": "^0.1.1",
-    "gulp-minify": "0.0.5",
+    "gulp-concat": "~2.6.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-load-plugins": "~1.5.0",
+    "gulp-minify": "2.1.0",
     "gulp-rename": "~1.2.2",
-    "gulp-rollup": "^1.7.0",
+    "gulp-rollup": "^2.15.0",
     "gulp-sass": "^3.1.0",
-    "gulp-size": "~2.0.0",
-    "gulp-uglify": "~1.4.1",
-    "gulp-util": "~3.0.6",
+    "gulp-size": "~3.0.0",
+    "gulp-uglify": "~3.0.0",
     "html5shiv": "^3.7.3",
+    "marked": "~>0.3.9",
     "microlib-tabs": "^2.1.1",
     "open-iconic": "^1.1.1",
-    "promise": "~7.0.4",
+    "promise": "~8.0.1",
     "purecss": "^1.0.0",
-    "qs": "~> 1.0.0",
     "sortablejs": "^1.7.0",
-    "uglify-js": "~> 2.6.0",
+    "through2": "^2.0.3",
     "zepto": "^1.2.0"
   },
   "name": "wifidog-auth-flask",
   "version": "1.0.0",
   "repository": "git@github.com:datashaman/wifidog-auth-flask.git",
   "author": "datashaman <marlinf@datashaman.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
